--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>完美旋轉</title>
 </head>
 <body background="" height="">
 	
-	<div style="background-color: "text align="center"><h1>完美旋轉</h1></div>
+	<div style="background-color:#7700BB;"text align="center"><h1>完美旋轉</h1></div>
+	<img src="">
+	<div style="background-color:#EEEE00;"text align="center"><h1>1.關卡說明</h1></div>
 </body>
 </html>
