--- a/index.html
+++ b/index.html
@@ -2,19 +2,50 @@
 <html>
 <head>
 	<title>TwiSteD WaLLriDe PC完美旋轉</title>
-</head>
-<body background="https://i.agame01.com/images/8726745a25fd298ccad32f7b63b8ff0f8ee75b286ade3ca7e4a52e8b47ec2d63.jpg" height="700">
-	<div style="background-color:#FFB7DD;"text align="center"><h1>TwiSteD WaLLriDe PC完美旋轉</h1></div>
-	<img src="http://gamewikia.com/uploads/2018/07/20/1.1-c8e5918b5fbc154dc3e255daf7e0d88b.jpg" width="700" height="350" align="right">
+	<div style="background-color:#FFB7DD;"text align="center"><h1>TwiSteD WaLLriDe PC完美旋轉</h1></div></head>
+<body>
+<body background="https://s2.best-wallpaper.net/wallpaper/1920x1080/1810/GTA-V-city-buildings-art-picture_1920x1080.jpg">
+
+<center><img src="http://gamewikia.com/uploads/2018/07/20/1.1-c8e5918b5fbc154dc3e255daf7e0d88b.jpg" width="700" height="350" ></center>
 	<div style="background-color:#00DD00;"text align="left" width="50"><h1>1.關卡說明</h1></div>
-	<table>
+	<center><table>
 		<colgroup>
 			<col span="1" style="background-color:#99BBFF;" height="350">
 		</colgroup>
 		    <tr>
-		    	<td><h3>此關你可以自由的飆車，開在奇怪的路上</h3></td>
+		    	<td><h3>此關你可以自由的飆車，開在特殊的路上。</h3></td>
 		    </tr>
-	</table>
+	</table></center>
 	    <div style="background-color:#FF5511;"text align="left"><h1>2.關卡資訊</h1></div>
+	    <center><table>
+	       <colgroup span="5" style="background-color: #FFF;"></colgroup>
+           <colgroup style="background-color: #FFF;"></colgroup>	
+  <tr>
+    <th>評價</th>
+    <th>玩家人數</th>
+    <th>遊戲模式</th>
+    <th>路線類型</th>
+    <th>路線長度</th>
+  </tr>
+  <tr>
+    <td>74%</td>
+    <td>1 到 30 人</td>
+    <td>特技競速</td>
+    <td><center>繞圈</center></td>
+    <td>2.75 公里</td>
+  </tr>
+</table></center>
+    <div style="background-color:#007799;"text align="left" width="50"><h1>3.遊玩心得</h1></div>
+    <center><table>
+		<colgroup>
+			<col span="1" style="background-color:#EEEE00;" height="500">
+		</colgroup>
+		    <tr>
+		    	<td><h3>在此關中你會遇到許多讓你哭笑不得的奇葩的道路。</h3></td>
+		    </tr>
+	</table></center>
+	<center>
+		<a href="https://socialclub.rockstargames.com/job/gtav/G7xxkHwDmUeT3enODWz0Gw"style="color:orange;"><h2>去收藏!!</h2></a>
+	</center>
 </body>
 </html>
