--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 			<col span="1" style="background-color:#EEEE00;" height="500">
 		</colgroup>
 		    <tr>
-		    	<td><h3>在此關中你會遇到許多讓你哭笑不得的奇葩的道路，但是你會得到許多的樂趣</h3></td>
+		    	<td><h3>在此關中你會遇到許多讓你覺得奇葩的道路，但是你會得到許多的樂趣</h3></td>
 		    </tr>
 	</table></center>
 	<center>
 		<a href="https://socialclub.rockstargames.com/job/gtav/G7xxkHwDmUeT3enODWz0Gw"style="color:orange;"><h2>去收藏!!</h2></a>
 	</center>
+	<center><a href="" style="color: orange;"><h2>回上一頁</h2></a></center>
 </body>
 </html>
